[gd_scene load_steps=5 format=2]

[ext_resource path="res://Levels/school/boards/board2.png" type="Texture" id=1]
[ext_resource path="res://Levels/school/board.gd" type="Script" id=2]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 2.5, 2, 0.001 )

[sub_resource type="Animation" id=2]
resource_name = "start"
length = 5.0

[node name="board1" type="Sprite3D"]
transform = Transform( 0.781, 0, 4.47035e-08, 0, 0.781, 0, -3.35276e-08, 0, 1, -5, 2, 0.01 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 7.10543e-15, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/start = SubResource( 2 )

[connection signal="area_entered" from="Area" to="." method="_on_Area_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
